--- a/package.json
+++ b/package.json
@@ -1,7 +1,15 @@
 {
 	"name": "developerbacon-template",
 	"license": "MIT",
-	"private": true,
+	"version": "0.8.0",
+	"author": {
+		"name": "Brett Anda",
+		"url": "https://brettanda.ca"
+	},
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/brettanda/developerbacon-template.git"
+	},
 	"scripts": {
 		"build": "gridsome build",
 		"start": "gridsome develop",
@@ -14,33 +22,28 @@
 		}
 	},
 	"dependencies": {
-		"@gridsome/plugin-critical": "^0.1.3",
-		"@gridsome/plugin-sitemap": "^0.2.1",
-		"@gridsome/remark-prismjs": "^0.1.0",
-		"@gridsome/source-filesystem": "^0.5.0",
-		"@gridsome/transformer-remark": "^0.3.2",
+		"@gridsome/plugin-sitemap": "^0.2.2",
+		"@gridsome/remark-prismjs": "^0.2.0",
+		"@gridsome/source-filesystem": "^0.6.0",
+		"@gridsome/transformer-remark": "^0.3.3",
 		"animejs": "^3.0.1",
-		"font-awesome": "^4.7.0",
-		"gridsome": "^0.6.8",
+		"gridsome": "^0.7.3",
 		"jquery": "^3.4.1",
 		"normalize.css": "^8.0.0",
-		"rellax": "^1.10.0",
-		"sal.js": "^0.6.1",
 		"sendemail": "^3.4.0",
 		"vue-disqus": "^3.0.5"
 	},
 	"devDependencies": {
 		"assets-loader": "^0.5.2",
 		"css-loader": "^3.0.0",
-		"gridsome-plugin-sass-resources-loader": "^0.0.2",
+		"gridsome-plugin-sass-resources-loader": "^0.0.3",
 		"husky": "^3.0.2",
 		"imagemin-webpack-plugin": "^2.4.2",
-		"mini-css-extract-plugin": "^0.7.0",
+		"mini-css-extract-plugin": "^0.8.0",
 		"node-sass": "^4.12.0",
 		"postcss-loader": "^3.0.0",
 		"prettier": "1.18.2",
-		"prettier-webpack-plugin": "^1.2.0",
 		"pretty-quick": "^1.11.1",
-		"sass-loader": "^7.1.0"
+		"sass-loader": "7.1.0"
 	}
 }
