--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
 	"name": "developerbacon-template",
 	"license": "MIT",
-	"version": "0.8.0",
+	"version": "1.0.0",
 	"author": {
 		"name": "Brett Anda",
+		"email": "brettanda12@gmail.com",
 		"url": "https://brettanda.ca"
 	},
 	"repository": {
